Algoritmo A* + Arreglo de bugs en parte grafica

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="solve">Resolver</button>
     </div>
     <div>
-        <textarea id="solutionArea" cols="30" rows="10">Hola mundo</textarea>
+        <textarea rows="4" cols="25">Hola mundo</textarea>
     </div>
 
 
