Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="solve">Resolver</button>
     </div>
     <div>
-        <textarea rows="4" cols="25">Hola mundo</textarea>
+        <textarea id = "textareaSolution" rows="50" cols="25"></textarea>
     </div>
 
 
