Mejoras de interfaz

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
             <div id = "playButtons">
                 <button id="suffle">Revolver</button> 
-                <button id="getSolution">Mostrar solucion con Backtracking</button>
-                <button id="getSolution">Mostrar solucion con A*</button>
+                <button id="getSolutionA*">Mostrar solucion con Backtracking</button>
+                <button id="getSolutionBacktracking">Mostrar solucion con A*</button>
                 <button id="solve">Resolver</button>
                 <div id = "tamañoDiv">
                     <label>Tamaño</label>
