Funcionalidad de todos los botones + resolucion auto

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
             <div id = "playButtons">
                 <button id="suffle">Revolver</button> 
-                <button id="getSolutionA*">Mostrar solucion con Backtracking</button>
-                <button id="getSolutionBacktracking">Mostrar solucion con A*</button>
+                <button id="getSolutionBacktracking">Mostrar solucion con Backtracking</button>
+                <button id="getSolutionA*">Mostrar solucion con A*</button>
                 <button id="solve">Resolver</button>
                 <div id = "tamañoDiv">
                     <label>Tamaño</label>
@@ -59,6 +59,21 @@
     </div>
     <div>
         <textarea id = "textareaSolution" rows="50" cols="25"></textarea>
+    </div>
+    <div class = "overlay" id = "overlayNoSolucion">
+        <div class = "overlayBox" id = "">
+            <h1>¡Caracoles! Parece que esta matriz no tiene solucion</h1>
+            <button id = "reiniciar">Reiniciar</button>
+            <button id = "continuar1">¡Quiero intentarlo de todos modos!</button>
+        </div>
+    </div>
+    <div class = "overlay" id = "overlayNoSearchSolucion">
+        <div class = "overlayBox" id = "">
+            <h1>¡Rayos! Parece que aun no le has buscado una solucion a esta matriz</h1>
+            <h1>Para buscar una solucion primero presiona alguno de los botones</h1>
+            <h1>"Buscar solucion por Backtracking" o "Buscar solucion por A*"</h1>
+            <button id = "continuar2">Continuar</button>
+        </div>
     </div>
 
     <img id = "imagen1" src =  "img/img_ejemplo.png" style = display:none>
